# project-2_mirokhin_jury_dpo-43

./: .gitignore  Makefile  README.md  pyproject.toml
src/: .gitignore  decorators.py
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
