[project]
name = "project-2-mirokhin-jury-dpo-43"
version = "0.1.0"
description = ""
authors = [
    {name = "Jury Mirokhin",email = "m@jura.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt (>=0.4.1,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "src" },
]

[tool.poetry.scripts]
project = "src.primitive_db.main:main"



[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

