[tool.poetry]
name = "primitive-db"
version = "0.1.0"
description = "A primitive console database management system"
authors = ["Jury Mirokhin <m@jura.me>"]
readme = "README.md"
packages = [
    { include = "primitive_db", from = "src" }, # <--- DeepSeek
]

[tool.poetry.dependencies]
python = "^3.13"
prompt = "^0.4.1"
prettytable = "^3.17.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"

[tool.poetry.scripts]
database = "primitive_db.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []